Bug 136171 - Images gone on file opening; recent 7.1 issue (after 21 august) Skia related
Summary: Images gone on file opening; recent 7.1 issue (after 21 august) Skia related
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
: 136195 136310 136324 136334 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-08-27 09:38 UTC by Telesto
Modified: 2020-09-26 21:50 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (13.57 MB, application/vnd.oasis.opendocument.text)
2020-08-27 09:38 UTC, Telesto
Details
Screenshot (223.35 KB, image/jpeg)
2020-08-28 08:23 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-08-27 09:38:08 UTC
Description:
Images gone on file opening; recent 7.1 issue (after 21 august)

Steps to Reproduce:
1. open the attached file

Actual Results:
Notice empty frames

Expected Results:
No so


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 6640d7f405d2970ba2825a9455926cc803284d01
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-08-27 09:38:38 UTC
Created attachment 164735 [details]
Example file
Comment 2 Telesto 2020-08-27 15:37:08 UTC
And is it possible to get some kind of UNIT test for this kind of issue. The missing images is rather prominent.
Comment 3 Luboš Luňák 2020-08-28 08:06:08 UTC
I don't see any problem.
Comment 4 Telesto 2020-08-28 08:23:22 UTC
Created attachment 164785 [details]
Screenshot

It looked like this.. but it's fine in same mode, so I assume a profile corruption, until proven otherwise

Sorry for the noise
Comment 5 Telesto 2020-08-28 08:28:33 UTC
Sorry, me being stupid idiot. Safe-mode is GDI. I reset the profile, still the same issue
Comment 6 V Stuart Foote 2020-08-28 17:03:03 UTC
confirmed, the images go missing on opening with Skia Vulkan or raster; but the images are visible with default GDI, or with OpenGL rendering enabled.

Version: 7.1.0.0.alpha0+ (x64)
Build ID: a486fd929d4b3e915f928ef495b6cb2b96d74a3a
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

RenderMethod: vulkan
Vendor: 0x8086
Device: 0x5916
API: 1.2.148
Driver: 0.402.395
DeviceType: integrated
DeviceName: Intel(R) HD Graphics 620
Denylisted: no
Comment 7 Luboš Luňák 2020-09-01 11:09:09 UTC
*** Bug 136310 has been marked as a duplicate of this bug. ***
Comment 8 Timur 2020-09-01 13:45:48 UTC
I reproduce in Windows 7 with Skia: 
DriverVersion: 15.200.1065.0
DriverDate: 7-21-2015
DeviceID: PCI\VEN_1002&DEV_6779&SUBSYS_21201028&REV_00
AdapterVendorID: 0x1002
AdapterDeviceID: 0x6779
AdapterSubsysID: 0x21201028
DeviceKey: System\CurrentControlSet\Control\Video\{3838DE04-C283-48F1-ACC5-16EC32365A10}\0000
DeviceString: AMD RADEON HD 6450

0
Comment 9 Commit Notification 2020-09-02 10:44:34 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2e3111838b7fc27065138850cafbb0f0e606d6f3

handle properly cleared bitmap used as alpha for Skia (tdf#136171)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Luboš Luňák 2020-09-02 11:15:45 UTC
*** Bug 136334 has been marked as a duplicate of this bug. ***
Comment 11 Stefan_Lange_KA@T-Online.de 2020-09-03 07:03:20 UTC
Test was OK with
Version: 7.1.0.0.alpha0+ (x64)
Build ID: e8b8e7be0b2ad693224cd94062a55610eb69df7e
CPU threads: 4; OS: Windows 10.0 Build 20206; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

I have also tested with UI render default and Skia/Vulcan. Both tests were OK too.
Comment 12 Stefan_Lange_KA@T-Online.de 2020-09-03 14:47:07 UTC
supplement to Comment 11:
I have tested both as I have described in the report of duplicate bug 136310 (insert an image in a new document) and by open an existing document containing images.
Comment 13 Luboš Luňák 2020-09-09 10:10:58 UTC
*** Bug 136195 has been marked as a duplicate of this bug. ***
Comment 14 Roman Kuznetsov 2020-09-26 21:50:01 UTC
*** Bug 136324 has been marked as a duplicate of this bug. ***