handle properly cleared bitmap used as alpha for Skia (tdf#136171)

Change-Id: I2c9e5d58247d5fd85aac539728fa857462785090
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101895
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit 2e3111838b7fc27065138850cafbb0f0e606d6f3)